--- a/src/App.css
+++ b/src/App.css
@@ -2675,13 +2675,13 @@
     text-align: center;
   }
 
-    header.major:after {
+    /*header.major:after {
       content: '';
       border-bottom: solid 2px #e6e6e6;
       display: block;
       width: 4em;
       margin: 2em auto 0 auto;
-    }
+    }*/
 
     @media screen and (max-width: 736px) {
 
@@ -3568,42 +3568,8 @@
     }
 
   }
-  #about.scrolled {
-    margin-top: 265px;
-  }
 
 /* Header */
-  #header.smaller {
-    height: 55px;
-    overflow: hidden;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 999;
-    width: 100%;
-    padding: 3.5em 0 1.5em 0 ;
-  }
-  #header.smaller img {
-      width: 45px;
-      height: 60px;
-      margin-top:1em;
-  }
-  #header.smaller p {
-      display: none;
-  }
-  #header.smaller h1 {
-      font-size: 1.55em;
-      font-weight: bold;
-      margin-bottom: 0.5em;
-  }
-  #header.smaller input[type="submit"], input[type="reset"], input[type="button"], button, .button {
-
-    height: 1.85em;
-    line-height: 1.95em;
-  }
-  #header.smaller .content {
-    margin-top:-2.5em;
-  }
 
   #header {
     background-color: #4696e5;
@@ -3626,13 +3592,14 @@
     background-attachment: fixed, fixed;
     background-size: auto, cover;
     height: 100vh;
-    -webkit-transition: height 0.3s;
-    -moz-transition: height 0.3s;
-    -ms-transition: height 0.3s;
-    -o-transition: height 0.3s;
-    transition: height 0.3s;
+    min-height: 35em;
   }
-      #header .button {
+
+    #header input[type="submit"],
+    #header input[type="reset"],
+    #header input[type="button"],
+    #header button,
+    #header .button {
       background-color: transparent;
       color: #ffffff !important;
       box-shadow: inset 0 0 0 2px rgba(255, 255, 255, 0.25);
@@ -3739,10 +3706,6 @@
       color: #b5d5f4;
     }
 
-    #header img {
-      border-radius: 50%;
-    }
-
     #header .image {
       box-shadow: 0 0 0 4px #4696e5, 0 0 0 5px rgba(255, 255, 255, 0.25);
     }
@@ -3838,15 +3801,14 @@
       }
 
     #header .content {
-      -moz-transition: opacity 0.5s ease, -moz-transform 1s ease;
+      /*-moz-transition: opacity 0.5s ease, -moz-transform 1s ease;
       -webkit-transition: opacity 0.5s ease, -webkit-transform 1s ease;
       -ms-transition: opacity 0.5s ease, -ms-transform 1s ease;
       transition: opacity 0.5s ease, transform 1s ease;
       -moz-transform: translateX(0);
       -webkit-transform: translateX(0);
       -ms-transform: translateX(0);
-      transform: translateX(0);
-      opacity: 1;
+      transform: translateX(0);*/
       text-align: right;
       margin: -3.5em 4em 0 0;
     }
@@ -4130,4 +4092,34 @@
       padding: 3em 1.5em 1em 1.5em ;
     }
 
+  }
+
+
+
+  section.spotlight {
+      margin-top: 70px;
+      margin-bottom: 50px;
+  }
+
+  ul.actions {
+      padding-top: 25px;
+  }
+
+  .growing-line {
+      width: 300px;
+      height: 2px;
+      display: block;
+      background-color: #e6e6e6;
+  }
+
+  .linewrapper {
+    overflow: hidden;
+    margin: auto;
+    width: 4em;
+  }
+
+  .smallgrey {
+      color: #e6e6e6;
+      width: 4em;
+      margin: auto;
   }
