--- a/src/App.css
+++ b/src/App.css
@@ -2050,7 +2050,7 @@
     -webkit-appearance: none;
     -ms-appearance: none;
     appearance: none;
-    border-radius: 6px;
+    border-radius: 3px;
     border: none;
     border-style: solid;
     border-width: 1px;
@@ -4123,3 +4123,5 @@
       width: 4em;
       margin: auto;
   }
+
+body { overflow-x:hidden;}
